<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FileAssignment_megabyte</string>
    <string name="action_settings">Settings</string>
    <string name="EditText">(Your Text Here)</string>
    <string name="InstructionsText">Load will restore old strings, Save will record the current one, and Delete will remove all strings</string>
    <string name="LoadButtonText">Load</string>
    <string name="SaveButtonText">Save</string>
    <string name="DeleteButtonText">Delete</string>    
</resources>
