<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

     
    <TextView
        android:id="@+id/tvInstructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/InstructionsText" />
 
	<EditText
	    android:id="@+id/etInput"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/buttonSave"
	    android:ems="10"
	    android:hint="@string/EditText" />
	
	<TextView
	    android:id="@+id/tvOutput"
	    android:layout_width="fill_parent"
	    android:layout_height="match_parent"
	    android:layout_below="@+id/etInput"
	    android:background="#BBBBBB" />

	<Button
	    android:id="@+id/buttonSave"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/tvInstructions"
	    android:layout_centerHorizontal="true"
	    android:gravity="center_horizontal"
	    android:text="@string/SaveButtonText"
	    android:onClick="buttonSave_pressed" />

	<Button
	    android:id="@+id/buttonLoad"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/tvInstructions"
	    android:layout_alignBaseline="@+id/buttonSave"
	    android:layout_alignBottom="@+id/buttonSave"
	    android:text="@string/LoadButtonText"
  	    android:onClick="buttonLoad_pressed" />

	<Button
	    android:id="@+id/buttonDelete"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/tvInstructions"
	    android:layout_alignBaseline="@+id/buttonSave"
	    android:layout_alignBottom="@+id/buttonSave"
	    android:layout_alignRight="@+id/tvInstructions"
	    android:text="@string/DeleteButtonText"
   	    android:onClick="buttonDelete_pressed" />

</RelativeLayout>